--- a/frontend/about.html
+++ b/frontend/about.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/uikit.min.js"></script>
-    <script src="index.js"></script>
 </head>
 <body>
     <nav id="navbar" class="uk-navbar">
@@ -18,6 +17,14 @@
             </ul>
         </div>
     </nav>
-    <div id="app"></div>
+    <div id="app">
+        <div id="main" class="uk-container uk-container-center">
+            <div class="uk-grid">
+                <div id="content" class="uk-width-medium-4-4">
+                    <h1>About</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
